examples/manual/failing/ArgLengthMismatch.purs
module ArgLengthMismatch where

  f x y = true
  f = false
